--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   runsBlack:
-    runs-on: python:3.9-alpine
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
