--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Run black
-        run: python -m pip install black
+        run: python3 -m pip install black
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
