--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -10,8 +10,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Run black
-        run: python3 -m pip install black
+      - uses: actions/setup-python@v1
+        with:
+          python-version: 3.x
+      - run: pip install black
+      - run: black .
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
